# ei-zephyr-sensors-dataforwarder

./: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  west.yml
src/: main.cpp
